# Phase2_CSCI461

./: Dockerfile  Nathan Fecadu  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.cfg  template.yml
.github/workflows/: aws.yml  build-and-deploy.yml
CSCI461/: .env.sample  .gitignore  DEPLOYMENT_URLS.md  README.md  VERIFY_GITHUB_SECRET.md  add_key_to_instance.sh  pyproject.toml  run.py  template.yml
CSCI461/.github/workflows/: aws.yml  cd.yml  ci.yml  deploy.yml
CSCI461/frontend/: index.html
CSCI461/run/: run.bash
CSCI461/src/api/: __init__.py  main.py
CSCI461/src/cli/: __init__.py  main.py  metrics.py  url_types.py
CSCI461/src/registry/: __init__.py  cli.py  logging_setup.py  models.py  ndjson_output.py  scorer.py
CSCI461/src/registry/metrics/: __init__.py  base.py  bus_factor.py  code_quality.py  dataset_and_code_score.py  dataset_quality.py  performance_claims.py  size_score.py
CSCI461/tests/: conftest.py  test_ndjson_output.py  test_scorer_ranges.py  test_smoke.py
CSCI461/tests/unit/: test_metrics_example.py  test_metrics_ramp_bus_net.py  test_metrics_size_code_dataset.py
cli/: __init__.py
docs/: ENV.md
run/: autograder_check.sh  run.bash
src/api/: main.py
src/cli/: __init__.py  main.py  metrics.py  url_types.py
src/registry/: url_parser.py
src/registry/metrics/: license_metric.py  ramp_up_time.py
tests/: test_scorer_ranges.py  test_smoke.py
tests/unit/: test_metrics_edgecases.py
