[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csci461-registry"
version = "0.1.0"
description = "Registry package for trustworthy model reuse scoring"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "CSCI461 Team" } ]

[tool.setuptools.packages.find]
where = ["src"]

# Flake8 configuration (in setup.cfg or .flake8 file)
# See setup.cfg for flake8 config

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["registry"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = ["huggingface_hub.*", "git.*"]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

# coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
